[package]
name = "currant"
description = "A simple library to spawn concurrent shell processes in rust"
documentation = "https://docs.rs/currant/latest/currant"
version = "0.2.8"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/allonsy/currant"
repository = "https://github.com/allonsy/currant"
exclude = [
    "examples/*",
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
nix = { version = "0.24.1", default-features = false, features = ["signal"] }
rand = "0.8.5"
shell-words = "1.1.0"

[features]
